# ai-redteam-eng

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security-scan.yml
docs/: agentic-security.md  ai-system-security.md  atlas-redteaming.md  cloud-security-ai.md  mcp-architecture-review.md  mcp-security.md  secure-by-default.md  secure-data-pipelines.md  supply-chain-security.md  threat-modeling.md
examples/: audit_mcp_server.py  audit_supply_chain.py  export_aibom.py  run_redteam.py  vulnerable_mcp_server.py
iac/terraform/aws-ai-gateway/: README.md  main.tf
src/airte/: __init__.py
src/airte/atlas/: __init__.py  ttp_suite.py
src/airte/cloud/: __init__.py  api_gateway.py  identity_proxy.py  secrets.py
src/airte/data_pipeline/: __init__.py  dlp.py  least_privilege.py  pii_presidio.py  provenance.py
src/airte/guardrails/: __init__.py  agent_guardrails.py  cost.py  input_filters.py  output_filters.py  rag_guardrails.py
src/airte/mcp_audit/: __init__.py  rules.py  scanner.py
src/airte/redteam/: __init__.py  attack_staging.py  data_poisoning.py  harness.py  jailbreak.py  model_extraction.py  model_inversion.py  prompt_injection.py  reconnaissance.py  supply_chain.py  targets.py  unbounded_consumption.py
src/airte/secure_mcp_server/: __init__.py  (+3 more)
tests/: test_cloud_and_pipeline.py  test_guardrails.py  test_mcp_audit.py  test_new_modules.py  test_redteam.py  test_roadmap.py  test_roadmap2.py  test_roadmap3.py  test_secure_mcp_server.py
(+4 files in other folders)
