[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-redteam-eng"
version = "0.4.0"
description = "Security engineering toolkit for AI pipelines, MCP integrations, and agentic architectures"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ai-redteam-eng contributors" }]
keywords = ["ai-security", "mcp", "red-team", "llm-security", "agentic", "owasp-llm", "mitre-atlas"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.11.0"]

[project.scripts]
airte-scan = "airte.mcp_audit.scanner:main"
airte-redteam = "airte.redteam.harness:main"
airte-supply-audit = "airte.supply_chain.auditor:main"
airte-aibom = "airte.supply_chain.aibom:main"
airte-vex = "airte.supply_chain.vex:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
